#  Copyright (c) ZenML GmbH 2024. All Rights Reserved.
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
#  or implied. See the License for the specific language governing
#  permissions and limitations under the License.
[tool.poetry]
name = "flask_service"
version = "0.1.0"
description = ""
authors = ["Marwan Zaarab <marwan.zaarab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.2"
pydantic = "^1.10.14"
requests = "^2.31.0"
zenml = "0.55.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
